--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@botmock-api/utils": "0.6.0",
     "botmock": "1.2.0",
     "chalk": "2.4.2",
     "dotenv": "7.0.0",
