fix url in sdk wrapper
update readme

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nodejs"
   ],
   "prettier": {
-    "singleQuote": true,
+    "singleQuote": false,
     "printWidth": 80
   },
   "repository": {
