--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   "dependencies": {
     "@botmock-api/utils": "0.6.0",
     "botmock": "1.2.0",
-    "chalk": "2.4.2",
     "dotenv": "8.0.0",
-    "esm": "3.2.22"
+    "esm": "3.2.22",
+    "fs-extra": "8.1.0"
   },
   "devDependencies": {
     "jest": "24.8.0"
